# trpl

./: README
sequence1/: CMakeLists.txt
sequence1/images/: image_list_l.txt  image_list_r.txt
sequence1/include/: cvpr_array_traits.hpp  cvpr_stub.hpp  geometry.hpp  labelmap.hpp  labelmap_as_graph.hpp  mask_utils.hpp  misc_utils.hpp.orig  misc_utils.hpp~  munkres.hpp  munkres.hpp~  readme.txt  readme.txt~  real_timer.hpp  real_timer.hpp~  text_file.hpp  text_file.hpp~  ublas_cimg.hpp  ublas_cimg.hpp~  ublas_random.hpp  ublas_random.hpp~
sequence1/include/detail/: statistics_detail.hpp
sequence1/src/: CMakeLists.txt  CMakeLists.txt~  camera.hpp  filter_trlet_impl.hpp  filter_trlet_main.cpp  finalize_trajectory_plan.hpp  generate_video.cpp  generate_video.cpp~  linprog_alone.hpp  linprog_alone_impl.hpp  linprog_alone_impl.hpp~  linprog_alone_main.cpp  linprog_app_impl.hpp  linprog_app_impl.hpp~  linprog_app_main.cpp  linprog_app_test.cpp  linprog_plan_impl.hpp  linprog_plan_main.cpp  linprog_plan_main.cpp~  lp.hpp  lp_impl.hpp  munkres.hpp~  munkres_main.cpp  munkres_main.cpp~  perf_eval_main.cpp  perf_eval_main.cpp~  perf_eval_main_backup.cpp  planning.hpp  planning_impl.hpp  post_processing.hpp  post_processing_app_main.cpp  post_processing_impl.hpp  pretr_main.cpp  pretr_test.cpp  propose_new_objects.hpp  propose_new_objects_impl.hpp  segment_parts.hpp  segment_parts_impl.hpp  tracking_data_package.hpp  vis_gtrst_pair.cpp  (+7 more)
sequence1/src/backup/: CMakeLists.txt
sequence1/workspace/car_detection/: cam1-20080702-162454-079.txt  cam1-20080702-162454-249.txt  cam1-20080702-162454-420.txt  cam1-20080702-162454-591.txt  cam1-20080702-162454-761.txt  cam1-20080702-162454-932.txt  cam1-20080702-162455-103.txt  cam1-20080702-162455-274.txt  cam1-20080702-162455-444.txt  cam1-20080702-162455-615.txt  cam1-20080702-162455-786.txt  cam1-20080702-162455-956.txt  cam1-20080702-162456-127.txt  cam1-20080702-162456-298.txt  cam1-20080702-162456-468.txt  cam1-20080702-162456-639.txt  cam1-20080702-162456-810.txt  cam1-20080702-162456-981.txt  cam1-20080702-162457-151.txt  cam1-20080702-162457-322.txt  cam1-20080702-162457-493.txt  cam1-20080702-162457-663.txt  cam1-20080702-162457-834.txt  cam1-20080702-162458-005.txt  cam1-20080702-162458-176.txt  cam1-20080702-162458-346.txt  cam1-20080702-162458-517.txt  cam1-20080702-162458-688.txt  cam1-20080702-162458-858.txt  cam1-20080702-162459-029.txt  cam1-20080702-162459-200.txt  cam1-20080702-162459-371.txt  cam1-20080702-162459-541.txt  cam1-20080702-162459-712.txt  cam1-20080702-162459-883.txt  cam1-20080702-162500-053.txt  cam1-20080702-162500-224.txt  cam1-20080702-162500-395.txt  cam1-20080702-162500-565.txt  cam1-20080702-162500-736.txt  (+112 more)
sequence1/workspace/detection/: cam1-20080702-162454-079_3d_ped.txt  cam1-20080702-162454-249_3d_ped.txt  cam1-20080702-162454-420_3d_ped.txt  cam1-20080702-162454-591_3d_ped.txt  cam1-20080702-162454-761_3d_ped.txt  cam1-20080702-162454-932_3d_ped.txt  (+114 more)
(+1038 files in other folders)
