project(src)


include_directories (${CMAKE_CURRENT_SOURCE_DIR}/common)

#add_subdirectory (test)

#add_subdirectory (bbseg) 

#add_subdirectory (bbseg_joint) 

#add_subdirectory (homotopy)

#add_subdirectory (gcut3d)

#add_subdirectory (video_slice)

#add_subdirectory (superpixel)

#add_subdirectory (bgseg) 

add_subdirectory (common)

add_subdirectory (pretr)


#add_subdirectory (test_lmdp)
#add_subdirectory (lmdp)
